- Player: AI Bubbles, Action: zaatakowal gracza AI Thanapat, Details: Strzal w pole x: 4 y: 6
- Player: AI Thanapat, Action: zaatakowal gracza AI Bubbles, Details: Strzal w pole x: 6 y: 5
- Player: AI Bubbles, Action: zaatakowal gracza AI Thanapat, Details: Strzal w pole x: 5 y: 3
- Player: AI Thanapat, Action: zaatakowal gracza AI Bubbles, Details: Strzal w pole x: 6 y: 6
- Player: AI Thanapat, Action: won, Details: Game Mode: Gracz vs Gracz
Date: 16.01.2025, 11:46
Players:
  - Player 1: 1
  - Player 2: 2
Winner: 1
Events:
- Player: 1, Action: uzupelnil plansze, Details: S........
- Player: 2, Action: uzupelnil plansze, Details: ....S....
- Player: 1, Action: zaatakowal gracza 2, Details: Strzal w pole x: 1 y: 1
- Player: 1, Action: won, Details: 



Game Mode: Tryb symulacji
Date: 16.01.2025, 11:54
Players:
  - Player 1: AI Thanapat
  - Player 2: AI Bubbles
Winner: AI Thanapat
Events:
- Player: AI Thanapat, Action: uzupelnil plansze, Details: .......S.................
- Player: AI Bubbles, Action: uzupelnil plansze, Details: ....S....................
- Player: AI Thanapat, Action: zaatakowal gracza AI Bubbles, Details: Strzal w pole x: 1 y: 3
- Player: AI Bubbles, Action: zaatakowal gracza AI Thanapat, Details: Strzal w pole x: 0 y: 0
- Player: AI Thanapat, Action: zaatakowal gracza AI Bubbles, Details: Strzal w pole x: 0 y: 4
- Player: AI Thanapat, Action: won, Details: 



Game Mode: Gracz vs AI
Date: 16.01.2025, 16:47
Players:
  - Player 1: test
  - Player 2: AI Shaniqua
Winner: test
Events:
- Player: test, Action: uzupelnil plansze, Details: .....S...
- Player: AI Shaniqua, Action: uzupelnil plansze, Details: .S.......
- Player: test, Action: zaatakowal gracza AI Shaniqua, Details: Strzal w pole x: 1 y: 0
- Player: AI Shaniqua, Action: zaatakowal gracza test, Details: Strzal w pole x: 0 y: 2
- Player: test, Action: zaatakowal gracza AI Shaniqua, Details: Strzal w pole x: 1 y: 1